# omnimouse-data-website

./: mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: cite.md  dataset.md  dataset_details.md  experiment.md  experiments.html  index.md  metadata_query.md  model.md  neurophysiological_experiments.md  subsets_and_references.md
docs/assets/stylesheets/: extra.css
docs/experiment_metadata/: cite.json  cleaned_full_combined_meta.json  combined_metadata.json  full_combined_meta.json
docs/experiment_metadata/stimulus_plot_data/: dynamic17797-4-7-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-5-7-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-6-2-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-6-4-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-6-6-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-6-7-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-7-3-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-7-5-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-8-5-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-9-3-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-9-4-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic17797-9-6-Video-021a75e56847d574b9acbcc06c675055_30hz.json  dynamic20457-5-9-Video-512cdd91f251cf74fff81375926f4002_30hz.json  dynamic20622-2-14-Video-512cdd91f251cf74fff81375926f4002_30hz.json  (+274 more)
docs/overrides/: experiment_detail.html
omnimouse/: mkdocs.yml
omnimouse/docs/: index.md
(+2 files in other folders)
