[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimouse-data-website"
version = "0.1.0"
description = "Documentation website for the Omnimouse dataset"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sinzlab" }
]

dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.optional-dependencies]
plugins = [
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-minify-plugin",
]

[tool.setuptools]
packages = []
